2006-06-19  Brian Warner  <warner@lothar.com>

	* buildbot/process/step_twisted.py (Trial): use logfiles= to track
	_trial_temp/test.log, not a separate 'cat' command. TODO: this
	will fail under windows because of os.sep issues. It might have
	worked before if 'cat' was doing cygwin path conversion.

	* buildbot/slave/commands.py (LogFileWatcher.__init__): note the
	creation of LogFileWatchers
	(ShellCommand._startCommand): and record the files that were
	watched in the 'headers' section of the ShellCommand output

	* buildbot/process/step.py (RemoteShellCommand.__init__): duh, you
	need to actually pass it to the slave if you want it to work.
	(ShellCommand): document it a bit

	* buildbot/test/test_shell.py: new test to validate LogFiles
	* buildbot/test/runutils.py (SlaveCommandTestBase): updates to
	test LogFiles
	* buildbot/test/emitlogs.py: enhance to wait for a line on stdin
	before printing the last batch of lines, to test that the polling
	logic is working properly

	* buildbot/process/step.py (LoggedRemoteCommand): improve LogFile
	handling, making it possible to track multiple logs for a single
	RemoteCommand. The previous single logfile is now known as the
	'stdio' log.
	(LoggedRemoteCommand.remoteUpdate): accept key='log' updates
	(RemoteShellCommand.__init__): accept logfiles=
	(LoggingBuildStep.startCommand): stdio_log is now one of many
	(ShellCommand): added logfiles= argument, as well as a class-level
	.logfiles attribute, which will be merged together to figure out
	which logfiles should be tracked. The latter maybe be useful for
	subclasses of ShellCommand which know they will aways produce
	secondary logfiles in the same location.

	* buildbot/slave/commands.py (ShellCommandPP): add writeStdin()
	and closeStdin() methods, preparing to make it possible to write
	to a ShellCommand's stdin at any time, not just at startup. These
	writes are buffered if the child process hasn't started yet.