@@ -1,5 +1,10 @@
 2006-06-19  Brian Warner  <warner@lothar.com>
 
+	* buildbot/process/step.py (OutputProgressObserver): generalize
+	the earlier StdioProgressObserver into an OutputProgressObserver
+	that can track LogFiles other than stdio.
+	(LoggingBuildStep.__init__): same
+
 	* buildbot/process/step_twisted.py (Trial): use logfiles= to track
 	_trial_temp/test.log, not a separate 'cat' command. TODO: this
 	will fail under windows because of os.sep issues. It might have
